ruby/sambamba.h

typedef struct { int8_t* buf; size_t len; } aint8_s;
typedef void* bam_reader_t; /* BAM reader object */
typedef struct {
    size_t len;          /* length of raw data */
    uint8_t* buf;  /* raw data */
    bam_reader_t reader; /* parent reader */
} bam_read_s;
                   
typedef bam_read_s* bam_read_t; /* single read */
typedef void* sam_header_t; /* SAM header */
/* -------------------------- D ranges of reads ----------------------------- */

typedef void* bam_read_range_t; /* range (in D sense) of BAM reads */
/* FIXME: currently, the latter function doesn't catch any exceptions.
         That is, if the file is somehow broken, it will just segfault. */

/* ------------------ Reference sequence information ------------------------ */
typedef struct {
    size_t name_len; /* length of reference sequence name */
    char* name_buf;  /* reference sequence name (zero-terminated) */
    int32_t length;  /* length of reference sequence */
} reference_info_s;  /* information about single reference sequence */
/* --------------------- BAM reader object -------- ------------------------- */

typedef void* task_pool_t; /* D task pool */
/* ----------------------------- Read in a pileup --------------------------- */

/* notice that pileup_read_t can be passed as an argument
   to all functions that expect bam_read_t */
typedef struct {
    bam_read_s read;
    int32_t additional_info[5];
} pileup_read_s;
typedef pileup_read_s* pileup_read_t;
typedef struct { pileup_read_s* buf; size_t len; } apileup_read_s;
/* current CIGAR operation */
uint32_t bam_pileup_read_cigar_operation(pileup_read_t);
/* how many bases were consumed from the current CIGAR operation */
uint32_t bam_pileup_read_cigar_operation_offset(pileup_read_t);
/* how many bases were consumed from the query sequence */
int32_t bam_pileup_read_query_offset(pileup_read_t);
/* current base */
char bam_pileup_read_current_base(pileup_read_t);
/* current base quality (-1 if deletion) */
int8_t bam_pileup_read_current_base_quality(pileup_read_t);
/* -------------------------- Pileup engine --------------------------------- */

typedef void* pileup_t;         /* pileup engine */
typedef void* pileup_column_t;  /* single pileup column */
/* Create a pileup engine.
   The reads must be coordinate-sorted (can be from different references),
   unmapped ones will be skipped automatically.
   If use_md is true, MD tag will be used to get reference bases.
   If skip_zeros is true, columns with zero coverage will be skipped. */
pileup_t bam_pileup_new(bam_read_range_t, bool use_md, bool skip_zeros);
/* Proceed to the next pileup column.
   The interface is a bit weird: you should tell the function
   whether you call it the first time on the pileup or not
   (otherwise, the first column will be skipped).
   This allows to move to the next column in a single FFI call.
   The returned value of NULL means that all columns are processed. */
pileup_column_t bam_pileup_next(pileup_t, bool it_wasnt_first_call);
/* --------------------------- Pileup column -------------------------------- */

/* reference ID */
int32_t bam_pileup_column_ref_id(pileup_column_t);
/* current reference base (always 'N' if use_md wasn't specified) */
char bam_pileup_column_ref_base(pileup_column_t);
/* array of reads overlapping current column */
apileup_read_s bam_pileup_column_reads(pileup_column_t);
/* coverage at the site */
size_t bam_pileup_column_coverage(pileup_column_t);
/* zero-based position on the reference */
uint64_t bam_pileup_column_position(pileup_column_t);
/* bases ('-' stay for deletions), length is equal to coverage */
char* f_bam_pileup_column_bases(pileup_column_t);
/* base qualities (-1 on deletions) */
aint8_s f_bam_pileup_column_base_quals(pileup_column_t);
/* ---------------------------- BAM writer ---------------------------------- */
typedef void* bam_writer_t;
/* default compression level is -1, the number can be in range -1 .. 9;
   BAM magic is automatically written during the construction;
   NULL return value indicates that an exception has occurred. */
bam_writer_t bam_writer_new(char* filename, int32_t compression_level);
bam_writer_t bam_writer_new2(char* filename, int32_t, task_pool_t);
/* the following functions return 0 if everything is OK, otherwise -1. */

/* next step after construction is to write SAM header */
int32_t bam_writer_push_header(bam_writer_t, sam_header_t);
/* then reference sequence information follows */
int32_t bam_writer_push_ref_info(bam_writer_t, reference_info_s* refs, size_t nrefs);
/* and then reads */
int32_t bam_writer_push_read(bam_writer_t, bam_read_t);
/* don't forget to close the stream! This also adds BGZF EOF block. */
int32_t bam_writer_close(bam_writer_t);
/* flushes current BGZF block; may be useful in some cases */
int32_t bam_writer_flush(bam_writer_t);