ruby/sambamba-ffi.rb

  
  # current CIGAR operation
  # 
  # @method bam_pileup_read_cigar_operation(pileup_read_s)
  # @param [PileupReadS] pileup_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_read_cigar_operation, :bam_pileup_read_cigar_operation, [PileupReadS], :uint
  
  # how many bases were consumed from the current CIGAR operation
  # 
  # @method bam_pileup_read_cigar_operation_offset(pileup_read_s)
  # @param [PileupReadS] pileup_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_read_cigar_operation_offset, :bam_pileup_read_cigar_operation_offset, [PileupReadS], :uint
  
  # how many bases were consumed from the query sequence
  # 
  # @method bam_pileup_read_query_offset(pileup_read_s)
  # @param [PileupReadS] pileup_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_read_query_offset, :bam_pileup_read_query_offset, [PileupReadS], :int
  
  # current base
  # 
  # @method bam_pileup_read_current_base(pileup_read_s)
  # @param [PileupReadS] pileup_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_read_current_base, :bam_pileup_read_current_base, [PileupReadS], :char
  
  # current base quality (-1 if deletion)
  # 
  # @method bam_pileup_read_current_base_quality(pileup_read_s)
  # @param [PileupReadS] pileup_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_read_current_base_quality, :bam_pileup_read_current_base_quality, [PileupReadS], :char
  
  # Create a pileup engine.
  #    The reads must be coordinate-sorted (can be from different references),
  #    unmapped ones will be skipped automatically.
  #    If use_md is true, MD tag will be used to get reference bases.
  #    If skip_zeros is true, columns with zero coverage will be skipped.
  # 
  # @method bam_pileup_new(bam_read_range_t, use_md, skip_zeros)
  # @param [FFI::Pointer(BamReadRangeT)] bam_read_range_t 
  # @param [Integer] use_md 
  # @param [Integer] skip_zeros 
  # @return [FFI::Pointer(PileupT)] 
  # @scope class
  attach_function :bam_pileup_new, :bam_pileup_new, [:pointer, :int, :int], :pointer
  
  # Proceed to the next pileup column.
  #    The interface is a bit weird: you should tell the function
  #    whether you call it the first time on the pileup or not
  #    (otherwise, the first column will be skipped).
  #    This allows to move to the next column in a single FFI call.
  #    The returned value of NULL means that all columns are processed.
  # 
  # @method bam_pileup_next(pileup_t, it_wasnt_first_call)
  # @param [FFI::Pointer(PileupT)] pileup_t 
  # @param [Integer] it_wasnt_first_call 
  # @return [FFI::Pointer(PileupColumnT)] 
  # @scope class
  attach_function :bam_pileup_next, :bam_pileup_next, [:pointer, :int], :pointer
  
  # reference ID
  # 
  # @method bam_pileup_column_ref_id(pileup_column_t)
  # @param [FFI::Pointer(PileupColumnT)] pileup_column_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_column_ref_id, :bam_pileup_column_ref_id, [:pointer], :int
  
  # current reference base (always 'N' if use_md wasn't specified)
  # 
  # @method bam_pileup_column_ref_base(pileup_column_t)
  # @param [FFI::Pointer(PileupColumnT)] pileup_column_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_column_ref_base, :bam_pileup_column_ref_base, [:pointer], :char
  
  # array of reads overlapping current column
  # 
  # @method bam_pileup_column_reads(pileup_column_t)
  # @param [FFI::Pointer(PileupColumnT)] pileup_column_t 
  # @return [ApileupReadS] 
  # @scope class
  attach_function :bam_pileup_column_reads, :bam_pileup_column_reads, [:pointer], ApileupReadS.by_value
  
  # coverage at the site
  # 
  # @method bam_pileup_column_coverage(pileup_column_t)
  # @param [FFI::Pointer(PileupColumnT)] pileup_column_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_column_coverage, :bam_pileup_column_coverage, [:pointer], :ulong
  
  # zero-based position on the reference
  # 
  # @method bam_pileup_column_position(pileup_column_t)
  # @param [FFI::Pointer(PileupColumnT)] pileup_column_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_pileup_column_position, :bam_pileup_column_position, [:pointer], :ulong
  
  # bases ('-' stay for deletions), length is equal to coverage
  # 
  # @method f_bam_pileup_column_bases(pileup_column_t)
  # @param [FFI::Pointer(PileupColumnT)] pileup_column_t 
  # @return [String] 
  # @scope class
  attach_function :f_bam_pileup_column_bases, :f_bam_pileup_column_bases, [:pointer], :string
  
  # base qualities (-1 on deletions)
  # 
  # @method f_bam_pileup_column_base_quals(pileup_column_t)
  # @param [FFI::Pointer(PileupColumnT)] pileup_column_t 
  # @return [Aint8S] 
  # @scope class
  attach_function :f_bam_pileup_column_base_quals, :f_bam_pileup_column_base_quals, [:pointer], Aint8S.by_value
  
  # default compression level is -1, the number can be in range -1 .. 9;
  #    BAM magic is automatically written during the construction;
  #    NULL return value indicates that an exception has occurred.
  # 
  # @method bam_writer_new(filename, compression_level)
  # @param [String] filename 
  # @param [Integer] compression_level 
  # @return [FFI::Pointer(BamWriterT)] 
  # @scope class
  attach_function :bam_writer_new, :bam_writer_new, [:string, :int], :pointer
  
  # (Not documented)
  # 
  # @method bam_writer_new2(filename, int, task_pool_t)
  # @param [String] filename 
  # @param [Integer] int 
  # @param [FFI::Pointer(TaskPoolT)] task_pool_t 
  # @return [FFI::Pointer(BamWriterT)] 
  # @scope class
  attach_function :bam_writer_new2, :bam_writer_new2, [:string, :int, :pointer], :pointer
  
  # next step after construction is to write SAM header
  # 
  # @method bam_writer_push_header(bam_writer_t, sam_header_t)
  # @param [FFI::Pointer(BamWriterT)] bam_writer_t 
  # @param [FFI::Pointer(SamHeaderT)] sam_header_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_writer_push_header, :bam_writer_push_header, [:pointer, :pointer], :int
  
  # then reference sequence information follows
  # 
  # @method bam_writer_push_ref_info(bam_writer_t, refs, nrefs)
  # @param [FFI::Pointer(BamWriterT)] bam_writer_t 
  # @param [ReferenceInfoS] refs 
  # @param [Integer] nrefs 
  # @return [Integer] 
  # @scope class
  attach_function :bam_writer_push_ref_info, :bam_writer_push_ref_info, [:pointer, ReferenceInfoS, :ulong], :int
  
  # and then reads
  # 
  # @method bam_writer_push_read(bam_writer_t, bam_read_s)
  # @param [FFI::Pointer(BamWriterT)] bam_writer_t 
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_writer_push_read, :bam_writer_push_read, [:pointer, BamReadS], :int
  
  # don't forget to close the stream! This also adds BGZF EOF block.
  # 
  # @method bam_writer_close(bam_writer_t)
  # @param [FFI::Pointer(BamWriterT)] bam_writer_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_writer_close, :bam_writer_close, [:pointer], :int
  
  # flushes current BGZF block; may be useful in some cases
  # 
  # @method bam_writer_flush(bam_writer_t)
  # @param [FFI::Pointer(BamWriterT)] bam_writer_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_writer_flush, :bam_writer_flush, [:pointer], :int
  
end
